Etapa6/parser.output
Terminals unused in grammar

   TK_PR_THEN
   TK_PR_FOREACH
   TK_PR_SWITCH
   TK_PR_CASE
   TK_PR_CLASS
   TK_PR_PRIVATE
   TK_PR_PUBLIC
   TK_PR_PROTECTED
   TK_PR_END
   TK_PR_DEFAULT
   TK_OC_NE
   TK_OC_FORWARD_PIPE
   TK_OC_BASH_PIPE
   TOKEN_ERRO
   '|'
   UNARY_QUESTION_MARK


Grammar

    0 $accept: program $end

    1 enter_scope: %empty

    2 exit_scope: %empty

    3 null_node: %empty

    4 program: %empty
    5        | grammars program

    6 grammars: global_var_declaration
    7         | function_declaration

    8 global_var_declaration: TK_PR_STATIC primitive_type TK_IDENTIFICADOR ';'
    9                       | primitive_type TK_IDENTIFICADOR ';'
   10                       | TK_PR_STATIC primitive_type TK_IDENTIFICADOR vector_dimensions ';'
   11                       | primitive_type TK_IDENTIFICADOR vector_dimensions ';'

   12 primitive_type: TK_PR_INT
   13               | TK_PR_FLOAT
   14               | TK_PR_CHAR
   15               | TK_PR_BOOL
   16               | TK_PR_STRING

   17 identifier: simple_identifier
   18           | vector

   19 simple_identifier: TK_IDENTIFICADOR

   20 vector: TK_IDENTIFICADOR dimension_exp_list

   21 vector_dimensions: '[' TK_LIT_INT ']' vector_dimensions
   22                  | '[' TK_LIT_INT ']'

   23 function_declaration: TK_PR_STATIC function_id enter_scope '(' function_parameters_list ')' function_command_block
   24                     | function_id enter_scope '(' function_parameters_list ')' function_command_block

   25 function_id: primitive_type TK_IDENTIFICADOR

   26 function_parameters_list: %empty
   27                         | function_parameters_argument
   28                         | function_parameters_argument ',' function_parameters_list

   29 function_parameters_argument: TK_PR_CONST primitive_type TK_IDENTIFICADOR
   30                             | primitive_type TK_IDENTIFICADOR

   31 function_command_block: '{' command_list '}' exit_scope

   32 command_block: enter_scope '{' command_list '}' exit_scope

   33 command_list: command command_list
   34             | command_block ';' command_list
   35             | loops command_list
   36             | %empty

   37 command: if_statement
   38        | local_var_declaration ';'
   39        | shift_command ';'
   40        | assignment_command ';'
   41        | input_command ';'
   42        | output_command ';'
   43        | function_call ';'
   44        | command_return ';'
   45        | TK_PR_BREAK ';'
   46        | TK_PR_CONTINUE ';'

   47 modifiers: TK_PR_STATIC TK_PR_CONST
   48          | TK_PR_STATIC
   49          | TK_PR_CONST

   50 no_modifier: %empty

   51 local_var_declaration: modifiers primitive_type TK_IDENTIFICADOR local_var_initialization
   52                      | primitive_type TK_IDENTIFICADOR local_var_initialization no_modifier
   53                      | primitive_type TK_IDENTIFICADOR null_node no_modifier

   54 local_var_initialization: TK_OC_LE literal_id

   55 function_call: simple_identifier '(' call_parameter_list ')'

   56 call_parameter_list: expression ',' call_parameter_list
   57                    | expression
   58                    | %empty

   59 assignment_command: identifier '=' expression

   60 input_command: TK_PR_INPUT expression

   61 output_command: TK_PR_OUTPUT expression
   62               | TK_PR_OUTPUT expression_list

   63 shift: TK_OC_SL
   64      | TK_OC_SR

   65 shift_command: identifier shift expression

   66 command_return: TK_PR_RETURN expression

   67 if_statement: TK_PR_IF '(' expression ')' command_block null_node
   68             | TK_PR_IF '(' expression ')' command_block TK_PR_ELSE command_block

   69 command_block_loop: '{' command_block_loop '}'
   70                   | '{' '}'
   71                   | command

   72 loops: loop_for
   73      | loop_while

   74 loop_while: TK_PR_WHILE '(' expression ')' TK_PR_DO command_block
   75           | TK_PR_WHILE '(' expression ')' command_block

   76 loop_for: TK_PR_FOR '(' loop_for_command_list ':' expression ':' loop_for_command_list ')' command_block_loop

   77 loop_for_command_list: loop_for_command ',' loop_for_command_list
   78                      | loop_for_command

   79 loop_for_command: local_var_declaration
   80                 | shift_command
   81                 | assignment_command

   82 expression_list: expression ',' expression_list
   83                | expression ',' expression

   84 expression: '(' expression ')'
   85           | '+' expression
   86           | '-' expression
   87           | '!' expression
   88           | '&' expression
   89           | '*' expression
   90           | '?' expression
   91           | '#' expression
   92           | expression '+' expression
   93           | expression '-' expression
   94           | expression '*' expression
   95           | expression '/' expression
   96           | expression '%' expression
   97           | expression TK_OC_OR expression
   98           | expression TK_OC_AND expression
   99           | expression TK_OC_EQ expression
  100           | expression TK_OC_LE expression
  101           | expression TK_OC_GE expression
  102           | expression '>' expression
  103           | expression '<' expression
  104           | expression '^' expression
  105           | expression '?' expression ':' expression
  106           | literal_id

  107 dimension_exp_list: '[' expression ']' dimension_exp_list
  108                   | '[' expression ']'

  109 literal_id: TK_IDENTIFICADOR
  110           | function_call
  111           | vector
  112           | TK_LIT_INT
  113           | TK_LIT_FLOAT
  114           | TK_LIT_CHAR
  115           | TK_LIT_STRING
  116           | TK_LIT_TRUE
  117           | TK_LIT_FALSE


Terminals, with rules where they appear

$end (0) 0
'!' (33) 87
'#' (35) 91
'%' (37) 96
'&' (38) 88
'(' (40) 23 24 55 67 68 74 75 76 84
')' (41) 23 24 55 67 68 74 75 76 84
'*' (42) 89 94
'+' (43) 85 92
',' (44) 28 56 77 82 83
'-' (45) 86 93
'/' (47) 95
':' (58) 76 105
';' (59) 8 9 10 11 34 38 39 40 41 42 43 44 45 46
'<' (60) 103
'=' (61) 59
'>' (62) 102
'?' (63) 90 105
'[' (91) 21 22 107 108
']' (93) 21 22 107 108
'^' (94) 104
'{' (123) 31 32 69 70
'|' (124)
'}' (125) 31 32 69 70
error (256)
TK_PR_INT (258) 12
TK_PR_FLOAT (259) 13
TK_PR_BOOL (260) 15
TK_PR_CHAR (261) 14
TK_PR_STRING (262) 16
TK_PR_IF (263) 67 68
TK_PR_THEN (264)
TK_PR_ELSE (265) 68
TK_PR_WHILE (266) 74 75
TK_PR_DO (267) 74
TK_PR_INPUT (268) 60
TK_PR_OUTPUT (269) 61 62
TK_PR_RETURN (270) 66
TK_PR_CONST (271) 29 47 49
TK_PR_STATIC (272) 8 10 23 47 48
TK_PR_FOREACH (273)
TK_PR_FOR (274) 76
TK_PR_SWITCH (275)
TK_PR_CASE (276)
TK_PR_BREAK (277) 45
TK_PR_CONTINUE (278) 46
TK_PR_CLASS (279)
TK_PR_PRIVATE (280)
TK_PR_PUBLIC (281)
TK_PR_PROTECTED (282)
TK_PR_END (283)
TK_PR_DEFAULT (284)
TK_OC_LE (285) 54 100
TK_OC_GE (286) 101
TK_OC_EQ (287) 99
TK_OC_NE (288)
TK_OC_AND (289) 98
TK_OC_OR (290) 97
TK_OC_SL (291) 63
TK_OC_SR (292) 64
TK_OC_FORWARD_PIPE (293)
TK_OC_BASH_PIPE (294)
TK_LIT_INT (295) 21 22 112
TK_LIT_FLOAT (296) 113
TK_LIT_FALSE (297) 117
TK_LIT_TRUE (298) 116
TK_LIT_CHAR (299) 114
TK_LIT_STRING (300) 115
TK_IDENTIFICADOR (301) 8 9 10 11 19 20 25 29 30 51 52 53 109
TOKEN_ERRO (302)
UNARY_QUESTION_MARK (303)
UNARY_PLUS (304)
UNARY_MINUS (305)
UNARY_ET (306)
UNARY_POINTER (307)


Nonterminals, with rules where they appear

$accept (76)
    on left: 0
enter_scope (77)
    on left: 1, on right: 23 24 32
exit_scope (78)
    on left: 2, on right: 31 32
null_node (79)
    on left: 3, on right: 53 67
program (80)
    on left: 4 5, on right: 0 5
grammars (81)
    on left: 6 7, on right: 5
global_var_declaration (82)
    on left: 8 9 10 11, on right: 6
primitive_type (83)
    on left: 12 13 14 15 16, on right: 8 9 10 11 25 29 30 51 52 53
identifier (84)
    on left: 17 18, on right: 59 65
simple_identifier (85)
    on left: 19, on right: 17 55
vector (86)
    on left: 20, on right: 18 111
vector_dimensions (87)
    on left: 21 22, on right: 10 11 21
function_declaration (88)
    on left: 23 24, on right: 7
function_id (89)
    on left: 25, on right: 23 24
function_parameters_list (90)
    on left: 26 27 28, on right: 23 24 28
function_parameters_argument (91)
    on left: 29 30, on right: 27 28
function_command_block (92)
    on left: 31, on right: 23 24
command_block (93)
    on left: 32, on right: 34 67 68 74 75
command_list (94)
    on left: 33 34 35 36, on right: 31 32 33 34 35
command (95)
    on left: 37 38 39 40 41 42 43 44 45 46, on right: 33 71
modifiers (96)
    on left: 47 48 49, on right: 51
no_modifier (97)
    on left: 50, on right: 52 53
local_var_declaration (98)
    on left: 51 52 53, on right: 38 79
local_var_initialization (99)
    on left: 54, on right: 51 52
function_call (100)
    on left: 55, on right: 43 110
call_parameter_list (101)
    on left: 56 57 58, on right: 55 56
assignment_command (102)
    on left: 59, on right: 40 81
input_command (103)
    on left: 60, on right: 41
output_command (104)
    on left: 61 62, on right: 42
shift (105)
    on left: 63 64, on right: 65
shift_command (106)
    on left: 65, on right: 39 80
command_return (107)
    on left: 66, on right: 44
if_statement (108)
    on left: 67 68, on right: 37
command_block_loop (109)
    on left: 69 70 71, on right: 69 76
loops (110)
    on left: 72 73, on right: 35
loop_while (111)
    on left: 74 75, on right: 73
loop_for (112)
    on left: 76, on right: 72
loop_for_command_list (113)
    on left: 77 78, on right: 76 77
loop_for_command (114)
    on left: 79 80 81, on right: 77 78
expression_list (115)
    on left: 82 83, on right: 62 82
expression (116)
    on left: 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101
    102 103 104 105 106, on right: 56 57 59 60 61 65 66 67 68 74 75
    76 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101
    102 103 104 105 107 108
dimension_exp_list (117)
    on left: 107 108, on right: 20 107
literal_id (118)
    on left: 109 110 111 112 113 114 115 116 117, on right: 54 106


State 0

    0 $accept: . program $end

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5
    TK_PR_STATIC  shift, and go to state 6

    $default  reduce using rule 4 (program)

    program                 go to state 7
    grammars                go to state 8
    global_var_declaration  go to state 9
    primitive_type          go to state 10
    function_declaration    go to state 11
    function_id             go to state 12


State 1

   12 primitive_type: TK_PR_INT .

    $default  reduce using rule 12 (primitive_type)


State 2

   13 primitive_type: TK_PR_FLOAT .

    $default  reduce using rule 13 (primitive_type)


State 3

   15 primitive_type: TK_PR_BOOL .

    $default  reduce using rule 15 (primitive_type)


State 4

   14 primitive_type: TK_PR_CHAR .

    $default  reduce using rule 14 (primitive_type)


State 5

   16 primitive_type: TK_PR_STRING .

    $default  reduce using rule 16 (primitive_type)


State 6

    8 global_var_declaration: TK_PR_STATIC . primitive_type TK_IDENTIFICADOR ';'
   10                       | TK_PR_STATIC . primitive_type TK_IDENTIFICADOR vector_dimensions ';'
   23 function_declaration: TK_PR_STATIC . function_id enter_scope '(' function_parameters_list ')' function_command_block

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    primitive_type  go to state 13
    function_id     go to state 14


State 7

    0 $accept: program . $end

    $end  shift, and go to state 15


State 8

    5 program: grammars . program

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5
    TK_PR_STATIC  shift, and go to state 6

    $default  reduce using rule 4 (program)

    program                 go to state 16
    grammars                go to state 8
    global_var_declaration  go to state 9
    primitive_type          go to state 10
    function_declaration    go to state 11
    function_id             go to state 12


State 9

    6 grammars: global_var_declaration .

    $default  reduce using rule 6 (grammars)


State 10

    9 global_var_declaration: primitive_type . TK_IDENTIFICADOR ';'
   11                       | primitive_type . TK_IDENTIFICADOR vector_dimensions ';'
   25 function_id: primitive_type . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 17


State 11

    7 grammars: function_declaration .

    $default  reduce using rule 7 (grammars)


State 12

   24 function_declaration: function_id . enter_scope '(' function_parameters_list ')' function_command_block

    $default  reduce using rule 1 (enter_scope)

    enter_scope  go to state 18


State 13

    8 global_var_declaration: TK_PR_STATIC primitive_type . TK_IDENTIFICADOR ';'
   10                       | TK_PR_STATIC primitive_type . TK_IDENTIFICADOR vector_dimensions ';'
   25 function_id: primitive_type . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 19


State 14

   23 function_declaration: TK_PR_STATIC function_id . enter_scope '(' function_parameters_list ')' function_command_block

    $default  reduce using rule 1 (enter_scope)

    enter_scope  go to state 20


State 15

    0 $accept: program $end .

    $default  accept


State 16

    5 program: grammars program .

    $default  reduce using rule 5 (program)


State 17

    9 global_var_declaration: primitive_type TK_IDENTIFICADOR . ';'
   11                       | primitive_type TK_IDENTIFICADOR . vector_dimensions ';'
   25 function_id: primitive_type TK_IDENTIFICADOR .

    ';'  shift, and go to state 21
    '['  shift, and go to state 22

    $default  reduce using rule 25 (function_id)

    vector_dimensions  go to state 23


State 18

   24 function_declaration: function_id enter_scope . '(' function_parameters_list ')' function_command_block

    '('  shift, and go to state 24


State 19

    8 global_var_declaration: TK_PR_STATIC primitive_type TK_IDENTIFICADOR . ';'
   10                       | TK_PR_STATIC primitive_type TK_IDENTIFICADOR . vector_dimensions ';'
   25 function_id: primitive_type TK_IDENTIFICADOR .

    ';'  shift, and go to state 25
    '['  shift, and go to state 22

    $default  reduce using rule 25 (function_id)

    vector_dimensions  go to state 26


State 20

   23 function_declaration: TK_PR_STATIC function_id enter_scope . '(' function_parameters_list ')' function_command_block

    '('  shift, and go to state 27


State 21

    9 global_var_declaration: primitive_type TK_IDENTIFICADOR ';' .

    $default  reduce using rule 9 (global_var_declaration)


State 22

   21 vector_dimensions: '[' . TK_LIT_INT ']' vector_dimensions
   22                  | '[' . TK_LIT_INT ']'

    TK_LIT_INT  shift, and go to state 28


State 23

   11 global_var_declaration: primitive_type TK_IDENTIFICADOR vector_dimensions . ';'

    ';'  shift, and go to state 29


State 24

   24 function_declaration: function_id enter_scope '(' . function_parameters_list ')' function_command_block

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5
    TK_PR_CONST   shift, and go to state 30

    $default  reduce using rule 26 (function_parameters_list)

    primitive_type                go to state 31
    function_parameters_list      go to state 32
    function_parameters_argument  go to state 33


State 25

    8 global_var_declaration: TK_PR_STATIC primitive_type TK_IDENTIFICADOR ';' .

    $default  reduce using rule 8 (global_var_declaration)


State 26

   10 global_var_declaration: TK_PR_STATIC primitive_type TK_IDENTIFICADOR vector_dimensions . ';'

    ';'  shift, and go to state 34


State 27

   23 function_declaration: TK_PR_STATIC function_id enter_scope '(' . function_parameters_list ')' function_command_block

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5
    TK_PR_CONST   shift, and go to state 30

    $default  reduce using rule 26 (function_parameters_list)

    primitive_type                go to state 31
    function_parameters_list      go to state 35
    function_parameters_argument  go to state 33


State 28

   21 vector_dimensions: '[' TK_LIT_INT . ']' vector_dimensions
   22                  | '[' TK_LIT_INT . ']'

    ']'  shift, and go to state 36


State 29

   11 global_var_declaration: primitive_type TK_IDENTIFICADOR vector_dimensions ';' .

    $default  reduce using rule 11 (global_var_declaration)


State 30

   29 function_parameters_argument: TK_PR_CONST . primitive_type TK_IDENTIFICADOR

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    primitive_type  go to state 37


State 31

   30 function_parameters_argument: primitive_type . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 38


State 32

   24 function_declaration: function_id enter_scope '(' function_parameters_list . ')' function_command_block

    ')'  shift, and go to state 39


State 33

   27 function_parameters_list: function_parameters_argument .
   28                         | function_parameters_argument . ',' function_parameters_list

    ','  shift, and go to state 40

    $default  reduce using rule 27 (function_parameters_list)


State 34

   10 global_var_declaration: TK_PR_STATIC primitive_type TK_IDENTIFICADOR vector_dimensions ';' .

    $default  reduce using rule 10 (global_var_declaration)


State 35

   23 function_declaration: TK_PR_STATIC function_id enter_scope '(' function_parameters_list . ')' function_command_block

    ')'  shift, and go to state 41


State 36

   21 vector_dimensions: '[' TK_LIT_INT ']' . vector_dimensions
   22                  | '[' TK_LIT_INT ']' .

    '['  shift, and go to state 22

    $default  reduce using rule 22 (vector_dimensions)

    vector_dimensions  go to state 42


State 37

   29 function_parameters_argument: TK_PR_CONST primitive_type . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 43


State 38

   30 function_parameters_argument: primitive_type TK_IDENTIFICADOR .

    $default  reduce using rule 30 (function_parameters_argument)


State 39

   24 function_declaration: function_id enter_scope '(' function_parameters_list ')' . function_command_block

    '{'  shift, and go to state 44

    function_command_block  go to state 45


State 40

   28 function_parameters_list: function_parameters_argument ',' . function_parameters_list

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5
    TK_PR_CONST   shift, and go to state 30

    $default  reduce using rule 26 (function_parameters_list)

    primitive_type                go to state 31
    function_parameters_list      go to state 46
    function_parameters_argument  go to state 33


State 41

   23 function_declaration: TK_PR_STATIC function_id enter_scope '(' function_parameters_list ')' . function_command_block

    '{'  shift, and go to state 44

    function_command_block  go to state 47


State 42

   21 vector_dimensions: '[' TK_LIT_INT ']' vector_dimensions .

    $default  reduce using rule 21 (vector_dimensions)


State 43

   29 function_parameters_argument: TK_PR_CONST primitive_type TK_IDENTIFICADOR .

    $default  reduce using rule 29 (function_parameters_argument)


State 44

   31 function_command_block: '{' . command_list '}' exit_scope

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_PR_IF          shift, and go to state 48
    TK_PR_WHILE       shift, and go to state 49
    TK_PR_INPUT       shift, and go to state 50
    TK_PR_OUTPUT      shift, and go to state 51
    TK_PR_RETURN      shift, and go to state 52
    TK_PR_CONST       shift, and go to state 53
    TK_PR_STATIC      shift, and go to state 54
    TK_PR_FOR         shift, and go to state 55
    TK_PR_BREAK       shift, and go to state 56
    TK_PR_CONTINUE    shift, and go to state 57
    TK_IDENTIFICADOR  shift, and go to state 58

    '}'       reduce using rule 36 (command_list)
    $default  reduce using rule 1 (enter_scope)

    enter_scope            go to state 59
    primitive_type         go to state 60
    identifier             go to state 61
    simple_identifier      go to state 62
    vector                 go to state 63
    command_block          go to state 64
    command_list           go to state 65
    command                go to state 66
    modifiers              go to state 67
    local_var_declaration  go to state 68
    function_call          go to state 69
    assignment_command     go to state 70
    input_command          go to state 71
    output_command         go to state 72
    shift_command          go to state 73
    command_return         go to state 74
    if_statement           go to state 75
    loops                  go to state 76
    loop_while             go to state 77
    loop_for               go to state 78


State 45

   24 function_declaration: function_id enter_scope '(' function_parameters_list ')' function_command_block .

    $default  reduce using rule 24 (function_declaration)


State 46

   28 function_parameters_list: function_parameters_argument ',' function_parameters_list .

    $default  reduce using rule 28 (function_parameters_list)


State 47

   23 function_declaration: TK_PR_STATIC function_id enter_scope '(' function_parameters_list ')' function_command_block .

    $default  reduce using rule 23 (function_declaration)


State 48

   67 if_statement: TK_PR_IF . '(' expression ')' command_block null_node
   68             | TK_PR_IF . '(' expression ')' command_block TK_PR_ELSE command_block

    '('  shift, and go to state 79


State 49

   74 loop_while: TK_PR_WHILE . '(' expression ')' TK_PR_DO command_block
   75           | TK_PR_WHILE . '(' expression ')' command_block

    '('  shift, and go to state 80


State 50

   60 input_command: TK_PR_INPUT . expression

    TK_LIT_INT        shift, and go to state 81
    TK_LIT_FLOAT      shift, and go to state 82
    TK_LIT_FALSE      shift, and go to state 83
    TK_LIT_TRUE       shift, and go to state 84
    TK_LIT_CHAR       shift, and go to state 85
    TK_LIT_STRING     shift, and go to state 86
    TK_IDENTIFICADOR  shift, and go to state 87
    '!'               shift, and go to state 88
    '#'               shift, and go to state 89
    '&'               shift, and go to state 90
    '+'               shift, and go to state 91
    '-'               shift, and go to state 92
    '*'               shift, and go to state 93
    '?'               shift, and go to state 94
    '('               shift, and go to state 95

    simple_identifier  go to state 96
    vector             go to state 97
    function_call      go to state 98
    expression         go to state 99
    literal_id         go to state 100


State 51

   61 output_command: TK_PR_OUTPUT . expression
   62               | TK_PR_OUTPUT . expression_list

    TK_LIT_INT        shift, and go to state 81
    TK_LIT_FLOAT      shift, and go to state 82
    TK_LIT_FALSE      shift, and go to state 83
    TK_LIT_TRUE       shift, and go to state 84
    TK_LIT_CHAR       shift, and go to state 85
    TK_LIT_STRING     shift, and go to state 86
    TK_IDENTIFICADOR  shift, and go to state 87
    '!'               shift, and go to state 88
    '#'               shift, and go to state 89
    '&'               shift, and go to state 90
    '+'               shift, and go to state 91
    '-'               shift, and go to state 92
    '*'               shift, and go to state 93
    '?'               shift, and go to state 94
    '('               shift, and go to state 95

    simple_identifier  go to state 96
    vector             go to state 97
    function_call      go to state 98
    expression_list    go to state 101
    expression         go to state 102
    literal_id         go to state 100


State 52

   66 command_return: TK_PR_RETURN . expression

    TK_LIT_INT        shift, and go to state 81
    TK_LIT_FLOAT      shift, and go to state 82
    TK_LIT_FALSE      shift, and go to state 83
    TK_LIT_TRUE       shift, and go to state 84
    TK_LIT_CHAR       shift, and go to state 85
    TK_LIT_STRING     shift, and go to state 86
    TK_IDENTIFICADOR  shift, and go to state 87
    '!'               shift, and go to state 88
    '#'               shift, and go to state 89
    '&'               shift, and go to state 90
    '+'               shift, and go to state 91
    '-'               shift, and go to state 92
    '*'               shift, and go to state 93
    '?'               shift, and go to state 94
    '('               shift, and go to state 95

    simple_identifier  go to state 96
    vector             go to state 97
    function_call      go to state 98
    expression         go to state 103
    literal_id         go to state 100


State 53

   49 modifiers: TK_PR_CONST .

    $default  reduce using rule 49 (modifiers)


State 54

   47 modifiers: TK_PR_STATIC . TK_PR_CONST
   48          | TK_PR_STATIC .

    TK_PR_CONST  shift, and go to state 104

    $default  reduce using rule 48 (modifiers)


State 55

   76 loop_for: TK_PR_FOR . '(' loop_for_command_list ':' expression ':' loop_for_command_list ')' command_block_loop

    '('  shift, and go to state 105


State 56

   45 command: TK_PR_BREAK . ';'

    ';'  shift, and go to state 106


State 57

   46 command: TK_PR_CONTINUE . ';'

    ';'  shift, and go to state 107


State 58

   19 simple_identifier: TK_IDENTIFICADOR .
   20 vector: TK_IDENTIFICADOR . dimension_exp_list

    '['  shift, and go to state 108

    $default  reduce using rule 19 (simple_identifier)

    dimension_exp_list  go to state 109


State 59

   32 command_block: enter_scope . '{' command_list '}' exit_scope

    '{'  shift, and go to state 110


State 60

   52 local_var_declaration: primitive_type . TK_IDENTIFICADOR local_var_initialization no_modifier
   53                      | primitive_type . TK_IDENTIFICADOR null_node no_modifier

    TK_IDENTIFICADOR  shift, and go to state 111


State 61

   59 assignment_command: identifier . '=' expression
   65 shift_command: identifier . shift expression

    TK_OC_SL  shift, and go to state 112
    TK_OC_SR  shift, and go to state 113
    '='       shift, and go to state 114

    shift  go to state 115


State 62

   17 identifier: simple_identifier .
   55 function_call: simple_identifier . '(' call_parameter_list ')'

    '('  shift, and go to state 116

    $default  reduce using rule 17 (identifier)


State 63

   18 identifier: vector .

    $default  reduce using rule 18 (identifier)


State 64

   34 command_list: command_block . ';' command_list

    ';'  shift, and go to state 117


State 65

   31 function_command_block: '{' command_list . '}' exit_scope

    '}'  shift, and go to state 118


State 66

   33 command_list: command . command_list

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_PR_IF          shift, and go to state 48
    TK_PR_WHILE       shift, and go to state 49
    TK_PR_INPUT       shift, and go to state 50
    TK_PR_OUTPUT      shift, and go to state 51
    TK_PR_RETURN      shift, and go to state 52
    TK_PR_CONST       shift, and go to state 53
    TK_PR_STATIC      shift, and go to state 54
    TK_PR_FOR         shift, and go to state 55
    TK_PR_BREAK       shift, and go to state 56
    TK_PR_CONTINUE    shift, and go to state 57
    TK_IDENTIFICADOR  shift, and go to state 58

    '}'       reduce using rule 36 (command_list)
    $default  reduce using rule 1 (enter_scope)

    enter_scope            go to state 59
    primitive_type         go to state 60
    identifier             go to state 61
    simple_identifier      go to state 62
    vector                 go to state 63
    command_block          go to state 64
    command_list           go to state 119
    command                go to state 66
    modifiers              go to state 67
    local_var_declaration  go to state 68
    function_call          go to state 69
    assignment_command     go to state 70
    input_command          go to state 71
    output_command         go to state 72
    shift_command          go to state 73
    command_return         go to state 74
    if_statement           go to state 75
    loops                  go to state 76
    loop_while             go to state 77
    loop_for               go to state 78


State 67

   51 local_var_declaration: modifiers . primitive_type TK_IDENTIFICADOR local_var_initialization

    TK_PR_INT     shift, and go to state 1
    TK_PR_FLOAT   shift, and go to state 2
    TK_PR_BOOL    shift, and go to state 3
    TK_PR_CHAR    shift, and go to state 4
    TK_PR_STRING  shift, and go to state 5

    primitive_type  go to state 120


State 68

   38 command: local_var_declaration . ';'

    ';'  shift, and go to state 121


State 69

   43 command: function_call . ';'

    ';'  shift, and go to state 122


State 70

   40 command: assignment_command . ';'

    ';'  shift, and go to state 123


State 71

   41 command: input_command . ';'

    ';'  shift, and go to state 124


State 72

   42 command: output_command . ';'

    ';'  shift, and go to state 125


State 73

   39 command: shift_command . ';'

    ';'  shift, and go to state 126


State 74

   44 command: command_return . ';'

    ';'  shift, and go to state 127


State 75

   37 command: if_statement .

    $default  reduce using rule 37 (command)


State 76

   35 command_list: loops . command_list

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_STRING      shift, and go to state 5
    TK_PR_IF          shift, and go to state 48
    TK_PR_WHILE       shift, and go to state 49
    TK_PR_INPUT       shift, and go to state 50
    TK_PR_OUTPUT      shift, and go to state 51
    TK_PR_RETURN      shift, and go to state 52
    TK_PR_CONST       shift, and go to state 53
    TK_PR_STATIC      shift, and go to state 54
    TK_PR_FOR         shift, and go to state 55
    TK_PR_BREAK       shift, and go to state 56
    TK_PR_CONTINUE    shift, and go to state 57
    TK_IDENTIFICADOR  shift, and go to state 58

    '}'       reduce using rule 36 (command_list)
    $default  reduce using rule 1 (enter_scope)

    enter_scope            go to state 59
    primitive_type         go to state 60
    identifier             go to state 61
    simple_identifier      go to state 62
    vector                 go to state 63
    command_block          go to state 64
    command_list           go to state 128
    command                go to state 66
    modifiers              go to state 67
    local_var_declaration  go to state 68
    function_call          go to state 69
    assignment_command     go to state 70
    input_command          go to state 71
    output_command         go to state 72
    shift_command          go to state 73
    command_return         go to state 74
    if_statement           go to state 75
    loops                  go to state 76
    loop_while             go to state 77
    loop_for               go to state 78


State 77

   73 loops: loop_while .

    $default  reduce using rule 73 (loops)


State 78

   72 loops: loop_for .

    $default  reduce using rule 72 (loops)


State 79

   67 if_statement: TK_PR_IF '(' . expression ')' command_block null_node
   68             | TK_PR_IF '(' . expression ')' command_block TK_PR_ELSE command_block

    TK_LIT_INT        shift, and go to state 81
    TK_LIT_FLOAT      shift, and go to state 82
    TK_LIT_FALSE      shift, and go to state 83
    TK_LIT_TRUE       shift, and go to state 84
    TK_LIT_CHAR       shift, and go to state 85
    TK_LIT_STRING     shift, and go to state 86
    TK_IDENTIFICADOR  shift, and go to state 87
    '!'               shift, and go to state 88
    '#'               shift, and go to state 89
    '&'               shift, and go to state 90
    '+'               shift, and go to state 91
    '-'               shift, and go to state 92
    '*'               shift, and go to state 93
    '?'               shift, and go to state 94
    '('               shift, and go to state 95

    simple_identifier  go to state 96
    vector             go to state 97
    function_call      go to state 98
    expression         go to state 129
    literal_id         go to state 100


State 80

   74 loop_while: TK_PR_WHILE '(' . expression ')' TK_PR_DO command_block
   75           | TK_PR_WHILE '(' . expression ')' command_block

    TK_LIT_INT        shift, and go to state 81
    TK_LIT_FLOAT      shift, and go to state 82
    TK_LIT_FALSE      shift, and go to state 83
    TK_LIT_TRUE       shift, and go to state 84
    TK_LIT_CHAR       shift, and go to state 85
    TK_LIT_STRING     shift, and go to state 86
    TK_IDENTIFICADOR  shift, and go to state 87
    '!'               shift, and go to state 88
    '#'               shift, and go to state 89
    '&'               shift, and go to state 90
    '+'               shift, and go to state 91
    '-'               shift, and go to state 92
    '*'               shift, and go to state 93
    '?'               shift, and go to state 94
    '('               shift, and go to state 95

    simple_identifier  go to state 96
    vector             go to state 97
    function_call      go to state 98
    expression         go to state 130
    literal_id         go to state 100


State 81

  112 literal_id: TK_LIT_INT .
